fixed guide alignment for hebrew language

--- a/scss/6-elements/guide/_rtl.scss
+++ b/scss/6-elements/guide/_rtl.scss
@@ -14,11 +14,8 @@
     text-align: left;
   }
 
-  .guide-content {
-    padding-top: 52px;
-  }
-
   // container for english language inside of rtl content
+  .version-selector,
   .lang-en {
     text-align: left;
     direction: ltr;
